# flask-rest-jsonapi-next

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-publish.yaml  tests.yaml
docs/: api.rst  conf.py  configuration.rst  data_layer.rst  errors.rst  features.rst  filtering.rst  flask-rest-jsonapi-next.rst  include_related_objects.rst  index.rst  installation.rst  logical_data_abstraction.rst  modules.rst  oauth.rst  pagination.rst  permission.rst  quickstart.rst  resource_manager.rst  routing.rst  sorting.rst  sparse_fieldsets.rst  sqlalchemy_2x_support.rst
examples/: api.py  api_nested.py
flask_rest_jsonapi_next/: __init__.py  api.py  decorators.py  exceptions.py  json_utilities.py  querystring.py  resource.py  schema.py  utils.py
flask_rest_jsonapi_next/data_layers/: alchemy.py  base.py
flask_rest_jsonapi_next/data_layers/filtering/: alchemy.py
flask_rest_jsonapi_next/error_responses/: error_formatters.py  errors_as_json_api.py
flask_rest_jsonapi_next/error_responses/exception_converters/: __init__.py  base.py  flask_rest_jsonapi.py  marshamallow.py  registry.py  sqlalchemy.py  werkzeug.py
src/flask_rest_jsonapi_next/: __init__.py  api.py  decorators.py  errors.py  exceptions.py  pagination.py  querystring.py  resource.py  schema.py
src/flask_rest_jsonapi_next/data_layers/: alchemy.py  base.py
src/flask_rest_jsonapi_next/data_layers/filtering/: alchemy.py
src/flask_rest_jsonapi_next/error_responses/: __init__.py  errors_as_json_api.py  exceptions.py
src/flask_rest_jsonapi_next/error_responses/exception_converters/: __init__.py  base.py  flask_rest_jsonapi.py  marshamallow.py  sqlalchemy.py  werkzeug.py
tests/: conftest.py  content_type_spec.py  querystring_spec.py  resource_detail_spec.py  resource_list_spec.py  resource_relationship_spec.py  resource_spec.py  sqlalchemy_data_layer_spec.py  sqlalchemy_filtering_spec.py  test_sqlalchemy_data_layer.py
tests/factories/: __init__.py  flask_app.py
tests/factories/models/: __init__.py  computer.py  db.py  fixtures.py  person.py  person_single_tag.py  person_tag.py  string_json_attribute_person.py
tests/factories/resources/: __init__.py  commons.py  computer.py  fixtures.py  person.py  string_json_attribute_person.py
