[metadata]
name = flask-rest-jsonapi-next
version = attr: flask_rest_jsonapi_next.__version__
description = Flask extension to create REST web api according to JSONAPI 1.0 specification with Flask, Marshmallow and data provider of your choice (SQLAlchemy, MongoDB, ...)
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomislav Adamic
author_email = tomislav.adamic@gmail.com
url = https://github.com/tadams42/flask-rest-jsonapi-next
license = MIT
license_files = LICENSE
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
keywords = web, api, rest, jsonapi, flask, sqlalchemy, marshmallow
platforms = any

[options]
zip_safe = False
python_requires = >=3.7
setup_requires =
    pytest-runner
install_requires =
    six
    Flask >= 1
    marshmallow >= 3
    marshmallow_jsonapi
    sqlalchemy
tests_require =
    pytest
packages = find:

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    pytest
    coveralls
    coverage
    ipython
    black
    isort
    bump2version
    twine
docs =
    sphinx
    sphinx_rtd_theme

[aliases]
test = pytest
